--- a/arch/arm/configs/wandboard_defconfig
+++ b/arch/arm/configs/wandboard_defconfig
@@ -74,7 +74,8 @@ CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
-# CONFIG_IKCONFIG is not set
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=14
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
@@ -96,7 +97,6 @@ CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
-CONFIG_PANIC_TIMEOUT=0
 CONFIG_EXPERT=y
 CONFIG_UID16=y
 CONFIG_SYSCTL_SYSCALL=y
@@ -113,7 +113,6 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
-CONFIG_ASHMEM=y
 # CONFIG_AIO is not set
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
@@ -297,8 +296,8 @@ CONFIG_IMX_HAVE_PLATFORM_IMX_PCIE=y
 # CONFIG_ARCH_MX503 is not set
 # CONFIG_ARCH_MX51 is not set
 CONFIG_ARCH_MX6=y
-CONFIG_FORCE_MAX_ZONEORDER=14
 CONFIG_ARCH_MX6Q=y
+CONFIG_FORCE_MAX_ZONEORDER=14
 CONFIG_SOC_IMX6Q=y
 # CONFIG_MACH_MX6Q_ARM2 is not set
 # CONFIG_MACH_MX6SL_ARM2 is not set
@@ -306,6 +305,7 @@ CONFIG_SOC_IMX6Q=y
 # CONFIG_MACH_MX6Q_SABRELITE is not set
 # CONFIG_MACH_MX6Q_SABRESD is not set
 # CONFIG_MACH_MX6Q_SABREAUTO is not set
+# CONFIG_MACH_MX6Q_HDMIDONGLE is not set
 CONFIG_MACH_WANDBOARD=y
 CONFIG_WANDBOARD_BASE=y
 
@@ -378,7 +378,6 @@ CONFIG_ARM_ERRATA_753970=y
 # CONFIG_ARM_ERRATA_754322 is not set
 # CONFIG_ARM_ERRATA_754327 is not set
 CONFIG_ARM_GIC=y
-# CONFIG_FIQ_DEBUGGER is not set
 
 #
 # Bus support
@@ -386,7 +385,8 @@ CONFIG_ARM_GIC=y
 CONFIG_ARM_AMBA=y
 CONFIG_PCI=y
 CONFIG_PCI_SYSCALL=y
-# CONFIG_ARCH_SUPPORTS_MSI is not set
+CONFIG_ARCH_SUPPORTS_MSI=y
+CONFIG_PCI_MSI=y
 # CONFIG_PCI_DEBUG is not set
 # CONFIG_PCI_STUB is not set
 # CONFIG_PCI_IOV is not set
@@ -452,7 +452,6 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
-CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 
 #
 # Boot options
@@ -521,7 +520,6 @@ CONFIG_HAVE_AOUT=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
-# CONFIG_WAKELOCK is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_RUNTIME=y
@@ -529,7 +527,6 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_APM_EMULATION=y
 CONFIG_PM_RUNTIME_CLK=y
-# CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_NET=y
 
@@ -566,8 +563,6 @@ CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_IPV6 is not set
-# CONFIG_ANDROID_PARANOID_NETWORK is not set
-# CONFIG_NET_ACTIVITY_STATS is not set
 # CONFIG_NETWORK_SECMARK is not set
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 # CONFIG_NETFILTER is not set
@@ -644,7 +639,6 @@ CONFIG_CFG80211=y
 CONFIG_CFG80211_WEXT=y
 # CONFIG_WIRELESS_EXT_SYSFS is not set
 # CONFIG_LIB80211 is not set
-# CONFIG_CFG80211_ALLOW_RECONNECT is not set
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
 # CONFIG_RFKILL is not set
@@ -671,7 +665,6 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
-# CONFIG_SYNC is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
@@ -831,10 +824,7 @@ CONFIG_WLAN=y
 # CONFIG_PRISM54 is not set
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
-# CONFIG_WIFI_CONTROL_FUNC is not set
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCM4329 is not set
-# CONFIG_BCMDHD is not set
 CONFIG_BRCMUTIL=m
 CONFIG_BRCMFMAC=m
 CONFIG_BRCMFMAC_SDIO=y
@@ -898,7 +888,6 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_Y=720
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 # CONFIG_INPUT_APMPOWER is not set
-# CONFIG_INPUT_KEYRESET is not set
 
 #
 # Input Device Drivers
@@ -938,7 +927,6 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
-# CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 
 #
@@ -975,7 +963,6 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
 CONFIG_DEVPORT=y
-# CONFIG_DCC_TTY is not set
 # CONFIG_RAMOOPS is not set
 # CONFIG_MXS_VIIM is not set
 CONFIG_I2C=y
@@ -1400,7 +1387,6 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_DRM=y
 CONFIG_DRM_VIVANTE=y
 # CONFIG_STUB_POULSBO is not set
-# CONFIG_ION is not set
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
@@ -1622,7 +1608,6 @@ CONFIG_AC97_BUS=y
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 CONFIG_HIDRAW=y
-# CONFIG_UHID is not set
 
 #
 # USB Input Devices
@@ -1831,7 +1816,6 @@ CONFIG_USB_MASS_STORAGE=y
 # CONFIG_USB_G_SERIAL is not set
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
-# CONFIG_USB_G_ANDROID is not set
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
@@ -1851,8 +1835,6 @@ CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
-# CONFIG_MMC_EMBEDDED_SDIO is not set
-# CONFIG_MMC_PARANOID_SD_INIT is not set
 
 #
 # MMC/SD/SDIO Card Drivers
@@ -1860,7 +1842,6 @@ CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=8
 CONFIG_MMC_BLOCK_BOUNCE=y
-# CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 
@@ -1882,8 +1863,6 @@ CONFIG_MMC_SDHCI_ESDHC_IMX=y
 # CONFIG_MEMSTICK is not set
 # CONFIG_NEW_LEDS is not set
 # CONFIG_NFC_DEVICES is not set
-CONFIG_SWITCH=y
-# CONFIG_SWITCH_GPIO is not set
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
 CONFIG_RTC_LIB=y
@@ -1899,7 +1878,6 @@ CONFIG_RTC_INTF_SYSFS=y
 CONFIG_RTC_INTF_PROC=y
 CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_INTF_DEV_UIE_EMUL is not set
-# CONFIG_RTC_INTF_ALARM is not set
 # CONFIG_RTC_DRV_TEST is not set
 
 #
@@ -1996,11 +1974,6 @@ CONFIG_STAGING=y
 # CONFIG_R8712U is not set
 # CONFIG_RTS_PSTOR is not set
 # CONFIG_TRANZPORT is not set
-
-#
-# Android
-#
-# CONFIG_ANDROID is not set
 # CONFIG_POHMELFS is not set
 # CONFIG_LINE6_USB is not set
 # CONFIG_DRM_VMWGFX is not set
@@ -2316,7 +2289,6 @@ CONFIG_DEBUG_PREEMPT=y
 # CONFIG_LOCK_STAT is not set
 # CONFIG_DEBUG_SPINLOCK_SLEEP is not set
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
-# CONFIG_STACKTRACE is not set
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
